Portfolio page to be continued completed

--- a/styleC.css
+++ b/styleC.css
@@ -16,7 +16,7 @@
     border:10px solid darkgreen;
     background-color:white;
     min-height:50vh;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     /* flex:1; */
 }
 
