--- a/styleP.css
+++ b/styleP.css
@@ -34,3 +34,24 @@ body{
 .content p{
     margin:0
 }
+
+a:link, a:visited{
+    background-color:gray;
+    color:white;
+    padding: 14px 25px;
+    text-align:center;
+    text-decoration:none;
+    display:flex;
+}
+
+a:hover, a:active{
+    background-color:green;
+}
+
+ul{
+    list-style:none;
+}
+
+li{
+    padding:10px;
+}
