--- a/styleA.css
+++ b/styleA.css
@@ -2,11 +2,10 @@
     display:flex;
     justify-content:center;
     align-items: center;
-    min-height:50px;
     border:5px solid blue;
     height:100vh;
-    justify-content: space-between;
-    gap:10px;
+    justify-content: space-between; 
+    /* gap:10px; */
 }
 
 .container{ /*General Container for all*/
@@ -21,7 +20,29 @@
     justify-content: center;
     min-width:auto;
     justify-content: space-around;
-    /* border:5px solid red; */
+}
+
+.container-R{
+    height:100vh;
+    max-width:auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-M{
+    height:80vh;
+    max-width:140vh;
+    flex-direction: row;
+}
+.container-M-L{
+    width:50%;
+    height:80vh;
+    flex:wrap;
+}
+
+.container-M-R{
+    width:50%;
+    height:80vh;
 }
 
 .mylist{
@@ -32,3 +53,7 @@
     text-align: center;
     margin-top: 10px;
 } 
+
+.test-border{
+    border:3px solid red;
+}
