--- a/styleW.css
+++ b/styleW.css
@@ -6,7 +6,7 @@
     align-items:center;
     border:10px solid red;
     height:100vh; /*Don't use max-height*/
-    background-image:url(photos/Circuit-Back.jpg);
+    background-image:url(photos/intro.jpg);
     background-repeat:no-repeat;
     background-size:cover; /*Sets the background as cover*/
     background-attachment: fixed; /*fixes the photo*/
@@ -16,15 +16,16 @@
 .box-1{ /*Welcome message box*/
     justify-content:center;
     align-items:center;
-    border:10px solid black;
-    position:relative;
+    justify-content:space-evenly;
     
 }
 
 .box-1 h1{
-    font-size:20vh;
-    font-size:10vw;
+    font-size:40vh;
+    font-size:15vw;
     position:relative;
+    font-family: 'Alkatra', cursive;
+    color:white;
 }
 
 .container h1,h2,h3{
@@ -38,9 +39,10 @@
     display:flex;
     list-style-type:none;
     overflow:hidden;
-    background-color:red;
     text-align: center;
     justify-content:center;
+    justify-content:space-around;
+    gap:10px;
 }
 
 li a{
@@ -49,7 +51,11 @@ li a{
     text-align:center;
     padding:16px;
     text-decoration:none;
-    border:3px solid black;
+    font-size:50px;
+    border-radius:25px;
+    font-style:italic;
+    font-weight:bold;
+    
 }
 
 li a:hover{
