Information place in About page. Need to style

--- a/styleA.css
+++ b/styleA.css
@@ -1,59 +1,55 @@
-.main{
+body{
     display:flex;
-    justify-content:center;
-    align-items: center;
-    border:5px solid blue;
-    height:100vh;
-    justify-content: space-between; 
-    /* gap:10px; */
+    min-height:100vh;
 }
 
-.container{ /*General Container for all*/
+.sidebar{
+    min-width:150px;
+    background-color:gray;
     display:flex;
-    border:5px solid black;
-    flex-direction: column;
 }
 
-.container-L{
-    height:100vh;
-    align-items: center;
-    justify-content: center;
-    min-width:auto;
-    justify-content: space-around;
+.sidebar nav{
+    display:flex;
+    align-items:center;
 }
 
-.container-R{
-    height:100vh;
-    max-width:auto;
-    justify-content: center;
-    align-items: center;
+nav{
+    flex-direction:column;
+    justify-content:space-around;
+    min-height:100vh;
 }
 
-.container-M{
-    height:80vh;
-    max-width:140vh;
-    flex-direction: row;
-}
-.container-M-L{
-    width:50%;
-    height:80vh;
-    flex:wrap;
+.content{
+    flex-grow:1;
+    display:flex;
+    max-height:100vh;
+    border:3px solid black;
+    flex-wrap: wrap;
+    
 }
 
-.container-M-R{
-    width:50%;
-    height:80vh;
+.container-1{
+    display:flex;
+    height:50%;
+    width:100%;
+    border:2px solid red;
+    background-color:white;
 }
 
-.mylist{
-    list-style:none; 
-} 
+.container-2{
+    display:flex;
+    height:100%;
+    width:70%;
+    border:2px solid blue;
+    background-color: white;
+}
 
-.mylist h2, li, a{
-    text-align: center;
-    margin-top: 10px;
-} 
+.inner-text{
+    font-weight:700;
+    font-size:24px;
+    margin:auto;
+}
 
-.test-border{
-    border:3px solid red;
+@media only screen and(max-width:922px){
 }
