--- a/styleA.css
+++ b/styleA.css
@@ -1,11 +1,15 @@
 body{
     display:flex;
     min-height:100vh;
+    background-image:url('photos/contact-background.jpg');
+    background-repeat:no-repeat;
+    background-size:cover; /*Sets the background as cover*/
+    background-attachment: fixed; 
+    background-position:center center;
 }
 
 .sidebar{
     min-width:150px;
-    background-color:gray;
     display:flex;
 }
 
@@ -34,7 +38,6 @@ nav{
     height:50%;
     width:100%;
     border:2px solid red;
-    background-color:white;
 }
 
 .container-2{
@@ -42,7 +45,6 @@ nav{
     height:100%;
     width:70%;
     border:2px solid blue;
-    background-color: white;
 }
 
 .inner-text{
