--- a/styleA.css
+++ b/styleA.css
@@ -1,11 +1,12 @@
 body{
     display:flex;
     min-height:100vh;
-    background-image:url('photos/contact-background.jpg');
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+    /* background-image:url('photos/contact-background.jpg');
     background-repeat:no-repeat;
-    background-size:cover; /*Sets the background as cover*/
+    background-size:cover; 
     background-attachment: fixed; 
-    background-position:center center;
+    background-position:center center; */
 }
 
 .sidebar{
@@ -24,6 +25,21 @@ nav{
     min-height:100vh;
 }
 
+a{
+    background-color:aquamarine;
+    border-radius: 25px;
+    text-decoration:none;
+    font-style:italic;
+    font-weight:bold;
+    padding:16px;
+    color:black;
+    font-size:25px;
+}
+
+a:hover{
+    background-color:beige;
+}
+
 .content{
     flex-grow:1;
     display:flex;
@@ -38,6 +54,22 @@ nav{
     height:50%;
     width:100%;
     border:2px solid red;
+    color:white;
+    gap:2%;
+}
+
+.container-1 h1{
+    font-family: "Sofia", sans-serif;
+    text-align:center;
+    font-weight:bold;
+}
+
+.container-2 h3{
+    font-family: "Sofia", sans-serif;
+    border:5px solid green;
+    line-height:2;
+    min-height:70%;
+    text-align:justify;
 }
 
 .container-2{
@@ -47,10 +79,43 @@ nav{
     border:2px solid blue;
 }
 
+.container-2 h3{
+    flex:display;
+    border:3px solid yellow;
+    line-height:300%;
+}
+
+.container-3{
+    display:flex;
+    height:100%;
+    border:2px solid green;
+    justify-content: center;
+}
+
 .inner-text{
-    font-weight:700;
+    font-weight:500;
     font-size:24px;
     margin:auto;
+}
+
+.myList{
+    line-height:300%;
+}
+
+.myList li{
+    list-style-type:none;
+    font-family: "Sofia", sans-serif;
+}
+
+.centered{
+    text-align:center;
+    justify-content:center;
+}
+
+.myimage{
+    border-radius:50%;
+    max-height:60%;
+    align-self:center;
 }
 
 @media only screen and(max-width:922px){
