--- a/styleA.css
+++ b/styleA.css
@@ -1,17 +1,20 @@
-body{
+.container{
     display:flex;
-    min-height:100vh;
-    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-    /* background-image:url('photos/contact-background.jpg');
+    justify-content:space-between;
+    /* background: linear-gradient(to right, #0f2027, #203a43, #2c5364); */
+    background-image:url('photos/contact-background.jpg');
     background-repeat:no-repeat;
     background-size:cover; 
     background-attachment: fixed; 
-    background-position:center center; */
+    background-position:center center; 
+    /* min-height:100vh; */
 }
 
 .sidebar{
-    min-width:150px;
+    width:150px;
+    height:100vh;
     display:flex;
+    /* border:3px solid white; */
 }
 
 .sidebar nav{
@@ -41,19 +44,19 @@ a:hover{
 }
 
 .content{
-    flex-grow:1;
+    /* flex-grow:1; */
     display:flex;
-    max-height:100vh;
-    border:3px solid black;
+    height:100vh;
+    width:60%;
+    /* border:3px solid black; */
     flex-wrap: wrap;
-    
 }
 
 .container-1{
     display:flex;
     height:50%;
     width:100%;
-    border:2px solid red;
+    /* border:2px solid red; */
     color:white;
     gap:2%;
 }
@@ -66,7 +69,7 @@ a:hover{
 
 .container-2 h3{
     font-family: "Sofia", sans-serif;
-    border:5px solid green;
+    /* border:5px solid green; */
     line-height:2;
     min-height:70%;
     text-align:justify;
@@ -76,19 +79,19 @@ a:hover{
     display:flex;
     height:100%;
     width:70%;
-    border:2px solid blue;
+    /* border:2px solid blue; */
 }
 
 .container-2 h3{
     flex:display;
-    border:3px solid yellow;
+    /* border:3px solid yellow; */
     line-height:300%;
 }
 
 .container-3{
     display:flex;
     height:100%;
-    border:2px solid green;
+    /* border:2px solid green; */
     justify-content: center;
 }
 
@@ -119,4 +122,5 @@ a:hover{
 }
 
 @media only screen and(max-width:922px){
+    
 }
