--- a/styleC.css
+++ b/styleC.css
@@ -1,5 +1,48 @@
+body{
+    text-align:center;
+    /* line-height:1.8; */
+}
 
-.container-H{
+.main{
+    display:flex;
+    border:2px solid black;
+    justify-content:center;
+    height:100vh;
+    width:auto;
+    align-items:center;
+   
+}
+
+.container{
+    border:2px solid red;
+    display:flex;
+    height:60%;
+    width:60%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .container-H{
     display:flex;
     justify-content:center;
     align-items:center;
@@ -16,8 +59,6 @@
     border:10px solid darkgreen;
     background-color:white;
     min-height:50vh;
-    /* justify-content: space-between; */
-    /* flex:1; */
 }
 
 .container-D{
@@ -29,8 +70,7 @@
 
 
 .myspace{
-    margin:4%; /*Spacing between elements. Checkout spacing with % and px*/
-}
+    margin:5%;} /*Spacing between elements. Checkout spacing with % and px*/
 
 
 
