--- a/styleR.css
+++ b/styleR.css
@@ -12,6 +12,17 @@ body{
     max-width:15%;
     margin:1%;
     padding:1%;
+    align-items:center;
+}
+
+.left nav{
+    height:80%;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    border:2px solid black;
+    flex-direction:column;
+    justify-content:space-around;
 }
 
 .right{
