--- a/styleC.css
+++ b/styleC.css
@@ -1,84 +1,33 @@
 body{
-    text-align:center;
-    /* line-height:1.8; */
+    display:flex;
+    border:2px solid red;
+    min-height:100vh;
+    justify-content:center;
+    align-items:center;
 }
 
-.main{
+.form-container{
     display:flex;
     border:2px solid black;
-    justify-content:center;
-    height:100vh;
-    width:auto;
-    align-items:center;
-   
+    padding:2em;
+    min-height:70%; /*checkout modify with %?*/
+    width:80%;
+    height:70vh;
 }
 
-.container{
+.nav-bar{
+    display:flex;
+    border:2px solid blue;
+    padding:1em;
+    width:15%;
+    margin:1%;
+}
+
+.contact{
+    display:flex;
     border:2px solid red;
-    display:flex;
-    height:60%;
-    width:60%;
+    width:20%;
+    padding:1em;
+    margin:1%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .container-H{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    max-height:30vh;
-    border:10px solid darkblue;
-    background-color:white;
-    min-height:30px;
-}
-
-.container-C{
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    border:10px solid darkgreen;
-    background-color:white;
-    min-height:50vh;
-}
-
-.container-D{
-    display:flex;
-    flex-wrap:wrap;
-    border:10px solid darkgreen;
-    min-height:50vh;
-}
-
-
-.myspace{
-    margin:5%;} /*Spacing between elements. Checkout spacing with % and px*/
-
-
-
-/*multiple containers instead of one big one
-container-1 should contain information only on title of page
-container-2 should contain the information on the links and contact information
-container-1 needs to centered horizontally and styled
-container-2 needs two flex boxes: Container-2 items need to be centered horizontally and
-vertically. Text aligned for both child boxes. With contact information on left side and 
-links associated on the other for transition through multiple pages. 
-*/
