--- a/styleC.css
+++ b/styleC.css
@@ -21,6 +21,19 @@ body{
     padding:1em;
     width:15%;
     margin:1%;
+    flex-direction:column;
+    justify-content:center;
+    
+}
+
+.nav-bar nav{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    border:2px solid red;
+    height:70%;
+    justify-content:center;
+    justify-content:space-evenly;
 }
 
 .contact{
@@ -29,6 +42,8 @@ body{
     width:20%;
     padding:1em;
     margin:1%;
+    flex-direction:column;
+    align-items: center;
 }
 
 input[type=text], select, textarea{
@@ -53,7 +68,6 @@ input[type=submit]{
 input[type=submit]:hover{
     background-color:#45a049;
 }
-
 
 .contact-form{
     border-radius:5px;
