--- a/styleC.css
+++ b/styleC.css
@@ -44,6 +44,7 @@ body{
     margin:1%;
     flex-direction:column;
     align-items: center;
+    justify-content:space-between;
 }
 
 input[type=text], select, textarea{
@@ -75,3 +76,59 @@ input[type=submit]:hover{
     padding:5%;
 }
 
+.border-1{
+    border:3px solid black;
+}
+
+.border-2{
+    border:3px solid blue;
+}
+
+.social-box{
+    display:flex;
+    overflow:hidden;
+    flex-direction:row;
+    width:100%;
+    justify-content:space-between;
+}
+
+.number-box{
+    display:flex;
+    width:90%;
+    flex-direction:column;
+    height:50%;
+}
+
+/*social media */
+.fa{
+    padding:1em;
+    font-size:80%;
+    text-align:center;
+    text-decoration:none;
+    border-radius:50%;
+}
+
+.fa-hover{
+    opacity:0.10;
+}
+
+.fa-facebook{
+    background:#3B5998;
+    color:white;
+}
+
+.fa-twitter{
+    background:#55ACEE;
+    color:white;
+}
+
+.fa-instagram{
+    background:#007bb5;
+    color:white;
+}
+
+.fa-snapchat-ghost{
+    background:#fffc00;
+    color:white;
+    text-shadow:-1px 0 black, 10 px black , 1px 0 black, 0 -1px black;
+}
